@@ -2,10 +2,12 @@
   xmlns="http://namespaces.zope.org/zope">
 
   <subscriber handler=".modified.update_last_modified_by" />
+  <subscriber handler=".modified.update_date_last_published_semantic" />
   <adapter factory=".status.PublicationStatus" />
 
   <class class=".modified.Modified">
     <require interface=".interfaces.IModified"
              permission="zope.View" />
   </class>
+
 </configure>
